--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,4 +14,9 @@
     <body>
         {% block body %}{% endblock %}
     </body>
+    <style>
+        body {
+            background: url("https://placehold.co/100x100/FFFFFF/EFEFEF/png?text=51264");
+        }
+    </style>
 </html>
