--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,12 @@
             <li><a href="/location">Location CRUD</a></li>
             <li><a href="/forecast">Forecast (Measurement) CRUD</a></li>
         </ul>
+
+        {% if is_granted('ROLE_USER') %}
+            <a href="{{ path('app_logout') }}">Logout</a>
+        {% else %}
+            <a href="{{ path('app_login') }}">Login</a>
+        {% endif %}
     </body>
     <style>
         body {
@@ -36,4 +42,5 @@
             padding: 50px;
         }
     </style>
+
 </html>
