--- a/templates/forecast/index.html.twig
+++ b/templates/forecast/index.html.twig
@@ -25,8 +25,20 @@
                 <td>{{ forecast.UVIndex }}</td>
                 <td>{{ forecast.wind }}</td>
                 <td>
-                    <a href="{{ path('app_forecast_show', {'id': forecast.id}) }}">show</a>
-                    <a href="{{ path('app_forecast_edit', {'id': forecast.id}) }}">edit</a>
+                    {% if is_granted('ROLE_FORECAST_SHOW')%}
+                        <a href="{{ path('app_forecast_show', {'id': forecast.id}) }}">show</a>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_FORECAST_EDIT')%}
+                        <a href="{{ path('app_forecast_edit', {'id': forecast.id}) }}">edit</a>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_FORECAST_DELETE') %}
+                        <form method="post" action="{{ path('app_forecast_delete', {'id': forecast.id}) }}">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ forecast.id) }}">
+                            <button>delete</button>
+                        </form>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -37,5 +49,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_forecast_new') }}">Create new</a>
+    {% if is_granted('ROLE_FORECAST_NEW')%}
+        <a href="{{path('app_forecast_new')}}">Create new</a>
+    {% endif %}
+
+
 {% endblock %}
