--- a/templates/location/index.html.twig
+++ b/templates/location/index.html.twig
@@ -25,8 +25,20 @@
                 <td>{{ location.latitude }}</td>
                 <td>{{ location.longitude }}</td>
                 <td>
-                    <a href="{{ path('app_location_show', {'id': location.id}) }}">show</a>
-                    <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
+                    {% if is_granted('ROLE_LOCATION_SHOW')%}
+                        <a href="{{ path('app_location_show', {'id': location.id}) }}">show</a>
+                    {% endif %}
+                    
+                    {% if is_granted('ROLE_LOCATION_EDIT')%}
+                        <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_LOCATION_DELETE') %}
+                        <form method="post" action="{{ path('app_location_delete', {'id': location.id}) }}">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ location.id) }}">
+                            <button>delete</button>
+                        </form>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -37,5 +49,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_location_new') }}">Create new</a>
+    {% if is_granted('ROLE_LOCATION_NEW')%}
+        <a href="{{path('app_location_new')}}">Create new</a>
+    {% endif %}
+
+    
 {% endblock %}
