--- a/templates/forecast/city.html.twig
+++ b/templates/forecast/city.html.twig
@@ -9,8 +9,8 @@
 <main>
     <h1>Weather in {{location.city}}, {{location.country}} </h1>
     <ul>
-        {% for measurement in measurements %}
-            <li> {{measurement.date|date('d.m.Y')}}: {{measurement.temperatureInCelsius}}&deg;C</li>
+        {% for forecast in forecasts %}
+            <li> {{forecast.date|date('d.m.Y')}}: {{forecast.temperatureInCelsius}}&deg;C</li>
         {% endfor %}
     </ul>
 </main>
